--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       <span class="hamburger">
         <i class="fa-sharp fa-solid fa-bars"></i>
 
-        <object class="uber" data="./images/97c43f8974e6c876.svg" ></object>
+        <object class="uber" data="./images/97c43f8974e6c876.svg"></object>
       </span>
 
       <div>
         <button class="click2"><i class="fa-solid fa-user"></i>Log in</button>
-        <button class="click1">Sign up</button>
+        <a href="SignUp.html"><button class="click1">Sign up</button></a>
       </div>
     </div>
 
@@ -43,6 +43,7 @@
             href="https://www.google.com/maps/place/VED+HEIGHTS,+Medankarwadi,+Maharashtra+410501/@18.7477028,73.866223,
             17z/data=!4m13!1m7!3m6!1s0x3bc2c992587b246b:0x6182541fec952356!2sVED+HEIGHTS,+Medankarwadi,
             +Maharashtra+410501!3b1!8m2!3d18.747847!4d73.868186!3m4!1s0x3bc2c992587b246b:0x6182541fec952356!8m2!3d18.747847!4d73.868186"
+            target="_blank"
             ><i class="fa-sharp fa-solid fa-location-dot"></i
           ></a>
 
