--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Practice</title>
+    <title>Uber Eats</title>
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
@@ -30,7 +30,11 @@
       </span>
 
       <div>
-        <button class="click2"><i class="fa-solid fa-user"></i>Log in</button>
+        <a href="SignUp.html"
+          ><button class="click2">
+            <i class="fa-solid fa-user"></i>Log in
+          </button></a
+        >
         <a href="SignUp.html"><button class="click1">Sign up</button></a>
       </div>
     </div>
@@ -63,8 +67,33 @@
         <button class="food">Find Food</button>
       </div>
       <p class="line">
-        <a class="sign-in">Sign In</a> for your recent addresses
+        <a href="SignUp.html" class="sign-in">Sign In</a> for your recent
+        addresses
       </p>
+    </div>
+
+    <div class="images">
+      <span class="first">
+        <a target="_blank" href="https://instagram.com/varadsalunke____">
+          <img class="img" src="./images/dd109bb1f7572eed.png"
+        /></a>
+        <h1 class="card-head">Feed your employees</h1>
+        <a href="#"><h6 class="card-foot">Create a business account</h6></a>
+      </span>
+      <span class="first">
+        <a target="_blank" href="https://instagram.com/varadsalunke____">
+          <img class="img" src="./images/8148ef38ec4096b7.png"
+        /></a>
+        <h1 class="card-head">Your restaurant, delivered</h1>
+        <a href="#"><h6 class="card-foot">Add your restaurant</h6></a>
+      </span>
+      <span class="first">
+        <a target="_blank" href="https://instagram.com/varadsalunke____">
+          <img class="img" src="./images/7a9d4feba62d2c0b.png"
+        /></a>
+        <h1 class="card-head">Deliver with Uber Eats</h1>
+        <a href="#"><h6 class="card-foot">Sign up to deliver</h6></a>
+      </span>
     </div>
   </body>
 </html>
