--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <a href="#"><h6 class="card-foot">Create a business account</h6></a>
       </span>
       <span class="first">
-        <a target="_blank" href="https://instagram.com/varadsalunke____">
+        <a href="business.html">
           <img class="img" src="./images/8148ef38ec4096b7.png"
         /></a>
         <h1 class="card-head">Your restaurant, delivered</h1>
