--- a/SignUp.html
+++ b/SignUp.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./SignUp.css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Uber</title>
   </head>
   <body>
     <div class="logo">
