Updated Bussiness page

--- a/business.html
+++ b/business.html
@@ -18,41 +18,35 @@
       </span>
     </div>
     <div>
-      <img
-        class="background"
-        src="https://www.uber-assets.com/image/upload/f_auto,q_auto:eco,c_fill,w_1206,h_633/v1658225144/assets/30/7d0851-aad0-4583-a029-f339b38a1a9f/original/SSU_hero_2.png"
-      />
-      <div class="form-main">
-        <form class="form" action="Get Started">
-          <div class="form-div">
-
-              <input type="text" placeholder="Store name" /> <br />
-              <input type="text" placeholder="Store address" /><br />
-              <input type="text" placeholder="Floor/Suite(Optional)" /><br />
-          <input type="text" placeholder="First name" />
-          <input type="text" placeholder="Last name" /><br />
-          <input type="email" placeholder="Email" /><br />
-          <select class="country-code" name="">
-            <option class="opt" value="IN">IN</option>
-            <option class="opt" value="ENG">ENG</option>
-            <option class="opt" value="USA">USA</option>
-          </select>
-          <input type="tel" value="+91" placeholder="" /><br />
-          <select class="rest" name="">
+      <div class="form-main" style="height: 100vh">
+        <div class="form-div">
+          <form class="form" action="Get Started">
+            <input type="text" placeholder="Store name" /> <br />
+            <input type="text" placeholder="Store address" /><br />
+            <input type="text" placeholder="Floor/Suite(Optional)" /><br />
+            <input type="text" placeholder="First name" />
+            <input type="text" placeholder="Last name" /><br />
+            <input type="email" placeholder="Email" /><br />
+            <select class="country-code" name="">
+              <option class="opt" value="IN">IN</option>
+              <option class="opt" value="ENG">ENG</option>
+              <option class="opt" value="USA">USA</option>
+            </select>
+            <input type="tel" value="+91" placeholder="" /><br />
+            <select class="rest" name="">
               <option class="opt" value="IN">RESTAUARNT</option>
               <option class="opt" value="ENG">GROCERY STORE</option>
-            <option class="opt" value="USA">LIQUOR STORE</option>
-          </select>
-          <select class="country-code" name="Number of locations">
+              <option class="opt" value="USA">LIQUOR STORE</option>
+            </select>
+            <select class="country-code" name="Number of locations">
               <option class="opt" value="">1</option>
               <option class="opt" value="">2-5</option>
               <option class="opt" value="">6-25</option>
               <option class="opt" value="">25+</option>
-          </div>
-          </select>
-        </form>
+            </select>
+          </form>
+        </div>
       </div>
     </div>
-
   </body>
 </html>
