--- a/business.html
+++ b/business.html
@@ -42,7 +42,11 @@
               <option class="opt" value="">1</option>
               <option class="opt" value="">2-5</option>
               <option class="opt" value="">6-25</option>
-              <option class="opt" value="">25+</option>
+              <option class="opt" value="">25+</option></select
+            >\
+            <!-- remove this -->
+            <select>
+              <option>@5</option>
             </select>
           </form>
         </div>
