--- a/business.html
+++ b/business.html
@@ -9,41 +9,73 @@
   </head>
   <body>
     <div class="strip">
-      <span class="globe">
-        <i class="fa-light fa-globe"></i>
-        <img
-          class="logo2"
-          src="./images/Uber-Eats-for-Merchants---web_logo-HALF-clrspc.svg"
-        />
-      </span>
+      <i class="fa-light fa-globe"></i>
+      <img
+        class="logo2"
+        src="./images/Uber-Eats-for-Merchants---web_logo-HALF-clrspc.svg"
+      />
     </div>
-    <div>
-      <div class="form-main" style="height: 100vh">
-        <div class="form-div">
-          <form class="form" action="Get Started">
-            <input type="text" placeholder="Store name" /> <br />
-            <input type="text" placeholder="Store address" /><br />
-            <input type="text" placeholder="Floor/Suite(Optional)" /><br />
-            <input type="text" placeholder="First name" />
-            <input type="text" placeholder="Last name" /><br />
-            <input type="email" placeholder="Email" /><br />
-            <select class="country-code" name="">
+
+    <div class="background-form" style="height: 110vh">
+      <div class="form-div">
+        <h1 class="get">Get Started</h1>
+        <div class="inputs">
+          <form action="Get Started">
+            <input class="details" type="text" placeholder="Store name" />
+            <br />
+            <input
+              class="details"
+              type="text"
+              placeholder="Store address"
+            /><br />
+            <input
+              class="details"
+              type="text"
+              placeholder="Floor/Suite(Optional)"
+            /><br />
+            <input class="details1" type="text" placeholder="First name" />
+            <input class="details1" type="text" placeholder="Last name" /><br />
+            <input class="email" type="email" placeholder="Email" /><br />
+            <select class="country-code" style="height: 45px" name="">
               <option class="opt" value="IN">IN</option>
               <option class="opt" value="ENG">ENG</option>
               <option class="opt" value="USA">USA</option>
             </select>
-            <input type="tel" value="+91" placeholder="" /><br />
+            <input
+              class="tel"
+              type="tel"
+              style="height: 45px"
+              value="+91"
+              placeholder=""
+            /><br />
             <select class="rest" name="">
-              <option class="opt" value="IN">RESTAUARNT</option>
+              <option class="opt" value="IN">Restaurant</option>
               <option class="opt" value="ENG">GROCERY STORE</option>
-              <option class="opt" value="USA">LIQUOR STORE</option>
-            </select>
-            <select class="country-code" name="Number of locations">
+              <option class="opt" value="USA">LIQUOR STORE</option></select
+            ><br />
+            <select class="loc" name="Number of locations">
               <option class="opt" value="">1</option>
               <option class="opt" value="">2-5</option>
               <option class="opt" value="">6-25</option>
               <option class="opt" value="">25+</option>
             </select>
+            <select class="rest" name="" style="width: 460px">
+              <option class="opt" value="IN">Alcohol</option>
+              <option class="opt" value="ENG">BBQ</option>
+              <option class="opt" value="USA">Breakfast</option>
+              <option class="opt" value="USA">Italian</option>
+              <option class="opt" value="USA">Indian</option>
+            </select>
+            <h6 class="h6">
+              By clicking "Submit," you agree to
+              <a class="linkss" href="#">
+                Uber Eats General Terms and Conditions</a
+              >
+              and <br />
+              acknowledge you have read the
+              <a class="linkss" href="#">Privacy Policy</a>.
+            </h6>
+            <button class="submit">Submit</button>
           </form>
         </div>
       </div>
