Text added in business page

--- a/business.html
+++ b/business.html
@@ -14,6 +14,19 @@
         class="logo2"
         src="./images/Uber-Eats-for-Merchants---web_logo-HALF-clrspc.svg"
       />
+
+      <div>
+        <h1 class="text">
+          Unlock a new <br />
+          revenue stream
+        </h1>
+        <p class="small">
+          Uber’s global platform gives you the flexibility, visibility and
+          <br />
+          customer insights you need to connect with more customers.<br />
+          Partner with us today.
+        </p>
+      </div>
     </div>
 
     <div class="background-form" style="height: 110vh">
